Added assignment to variables.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,8 @@
 CC=./cc
 
-test: test01
+test: test01 test02
 	echo "done"
+	$(MAKE) clean
 
 test%: test%.c
 	$(CC) output.s <$^
@@ -10,7 +11,8 @@ test%: test%.c
 	./$@-wrapper
 
 clean:
-	rm *.o
-	rm *.s
-	rm cc
-	rm test01
+	rm test01 || true
+	rm test02 || true
+	rm *.o || true
+	rm *.s || true
+	rm cc || true
