--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,6 @@
 CC=./cc
 
-test: test01 test02 test03 test04
+test: test01 test02 test03 test04 test05
 	echo "done"
 
 test%: test%.c cc
@@ -13,7 +13,10 @@ clean:
 	rm test01 2>/dev/null || true
 	rm test02 2>/dev/null || true
 	rm test03 2>/dev/null || true
+	rm test04 2>/dev/null || true
+	rm test05 2>/dev/null || true
 	rm test*-output.s 2>/dev/null || true
+	rm comp.output || true
 	rm *.o 2>/dev/null || true
 	rm *.s 2>/dev/null || true
 	rm cc 2>/dev/null || true
