Added assignment to variables just declared.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -15,6 +15,8 @@ clean:
 	rm test03 2>/dev/null || true
 	rm test04 2>/dev/null || true
 	rm test05 2>/dev/null || true
+	rm test06 2>/dev/null || true
+	rm test07 2>/dev/null || true
 	rm test*-output.s 2>/dev/null || true
 	rm comp.output || true
 	rm *.o 2>/dev/null || true
