--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,6 @@
 CC=./cc
 
-test: test01 test02 test03 test04 test05 test06 test07
+test: test01 test02 test03 test04 test05 test06 test07 test08
 	echo "done"
 
 test%: test%.c cc
