Added variable scoping.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,6 @@
 CC=./cc
 
-test: test01 test02 test03 test04 test05 test06 test07 test08
+test: test01 test02 test03 test04 test05 test06 test07 test08 test09
 	echo "done"
 
 test%: test%.c cc
@@ -18,6 +18,7 @@ clean:
 	rm test06 2>/dev/null || true
 	rm test07 2>/dev/null || true
 	rm test08 2>/dev/null || true
+	rm test09 2>/dev/null || true
 	rm test*-output.s 2>/dev/null || true
 	rm comp.output || true
 	rm *.o 2>/dev/null || true
