Added break statement.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,6 @@
 CC=./cc
 
-test: test01 test02 test03 test04 test05 test06 test07 test08 test09 test10 test11 test12 test13 test14
+test: test01 test02 test03 test04 test05 test06 test07 test08 test09 test10 test11 test12 test13 test14 test15
 	echo "done"
 
 test%: test%.c cc
@@ -24,6 +24,7 @@ clean:
 	rm test12 2>/dev/null || true
 	rm test13 2>/dev/null || true
 	rm test14 2>/dev/null || true
+	rm test15 2>/dev/null || true
 	rm test*-output.s 2>/dev/null || true
 	rm comp.output || true
 	rm *.o 2>/dev/null || true
