--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,7 +3,7 @@ CC=./cc
 test: test01 test02 test03 test04 test05 test06 test07 test08 test09 test10 test11 test12 test13 test14 test15 test16
 	echo "done"
 
-test%: test%.c cc
+test%: source-test%.c cc
 	$(CC) $@-output.s <$^
 	as $@-output.s -o output.o
 	ld output.o -o $@
