Added basic char literals.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,13 +1,14 @@
 CC=./cc
 
-test: test01 test02 test03 test04 test05 test06 test07 test08 test09 test10 test11 test12 test13 test14 test15 test16 test17 test18 test19 test20 test21
+test: test01 test02 test03 test04 test05 test06 test07 test08 test09 test10 test11 test12 test13 test14 test15 test16 test17 test18 test19 test20 test21 test22
 	echo "done"
 
 test%: source-test%.c cc
 	$(CC) $@-output.s <$^
 	as $@-output.s -o output.o
 	ld output.o -o $@
-	./wrapper-$@ && (tput setaf 2; echo "[$@ passed]";  tput sgr0; ) || (tput setaf 1; echo "[$@ failed]"; tput sgr0; )
+	[ -f ./wrapper-$@ ] && ( ./wrapper-$@ && (tput setaf 2; echo "[$@ passed]";  tput sgr0; ) || (tput setaf 1; echo "[$@ failed]"; tput sgr0; ) ) \
+	|| ( ./$@ && (tput setaf 2; echo "[$@ passed]";  tput sgr0; ) || (tput setaf 1; echo "[$@ failed]"; tput sgr0; )  )
 
 clean:
 	rm test* 2>/dev/null || true
