--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,10 @@
 CC=./cc
 
-test: test01 test02 test03 test04 test05 test06 test07 test08 test09 test10 test11 test12 test13 test14 test15 test16 test17 test18 test19 test20 test21 test22
+test: test01 test02 test03 test04 test05 test06 test07 test08 test09 test10 test11 test12 test13 test14 test15 test16 test17 test18 test19 test20 test21 testb
 	echo "done"
+
+testb: test22 test23 test24 test25
+	echo "done" >/dev/null
 
 test%: source-test%.c cc
 	$(CC) $@-output.s $<
