Added the test and operator, and cleaned some stuff up. Also put the tester.sh script back in, and changed its name so it isn't deleted on clean up.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -9,7 +9,7 @@ test%: source-test%.c cc
 	$(CC) $@-output.s $<
 	as $@-output.s -o output.o
 	gcc output.o -o $@
-	./tester.sh $@
+	./run-test.sh $@
 
 clean:
 	rm test* 2>/dev/null || true
