Added more ability to pass more than one argument (argument passing system is still not entirely complete).

--- a/generator/backend/Makefile
+++ b/generator/backend/Makefile
@@ -1,7 +1,7 @@
 INCLUDE=../../include
 include ../../include/config.mk
 
-../backend.a: backend.o jumps.o int-arithmetic.o registers.o agnostic-arithmetic.o statics.o
+../backend.a: backend.o jumps.o int-arithmetic.o registers.o agnostic-arithmetic.o statics.o calls.o
 	$(AR)
 
 clean:
