Fixed a bug with returning size_t types.

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -1,4 +1,4 @@
 M4=m4 -I .
 
-../comp.y: cc.y statements.m4 for.m4 expressions.m4
+../comp.y: cc.y statements.m4 for.m4 expressions.m4 ../include/types.h
 	$(M4) $< >$@
