--- a/phase-3-generator/Makefile
+++ b/phase-3-generator/Makefile
@@ -1,15 +1,11 @@
 INCLUDE=../include
 include ../include/config.mk
 
-../generator.a: backend.a generator-misc.o generator-globals.o  generator-expr.o generator-statem.o
-	$(AR) 
-
-backend.a: backend/*
-	$(MAKE) -C backend/ ../backend.a
+../generator.a: generator-misc.o generator-globals.o  generator-expr.o generator-statem.o
+	$(AR)
 
 .PHONY:
 clean:
-	$(MAKE) -C backend/ clean
 	rm lex.yy.c 2>/dev/null || true
 	rm comp.tab.c 2>/dev/null || true
 	rm include/comp.tab.h 2>/dev/null || true
