--- a/phase-3-generator/Makefile
+++ b/phase-3-generator/Makefile
@@ -5,10 +5,5 @@ include ../include/config.mk
 	$(AR)
 
 .PHONY:
-clean:
-	rm lex.yy.c 2>/dev/null || true
-	rm comp.tab.c 2>/dev/null || true
-	rm include/comp.tab.h 2>/dev/null || true
-	rm *.o 2>/dev/null || true
-	rm main 2>/dev/null || true
-	rm *.a 2>/dev/null || true
+clean: clean_intern
+	echo "phase 3 clean"
