Added floating point addition.

--- a/phase-3-generator/Makefile
+++ b/phase-3-generator/Makefile
@@ -4,6 +4,9 @@ include ../include/config.mk
 ../generator.a: misc.o globals.o expr.o statem.o
 	$(AR)
 
+%.o: %.c
+	$(CMP)
+
 .PHONY:
 clean: clean_intern
 	echo "phase 3 clean"
