--- a/phase-4-backend/Makefile
+++ b/phase-4-backend/Makefile
@@ -7,6 +7,9 @@ include ../include/config.mk
 ../exported.o: exported.o
 	cp $^ $@
 
+%.o: %.c
+	$(CMP)
+
 exported.c: list-of-exported-functions.txt
 	./update-header.sh
 
