--- a/phase-2-parser/Makefile
+++ b/phase-2-parser/Makefile
@@ -3,6 +3,7 @@ include ../include/config.mk
 
 M4=m4 -I .
 
+
 ifdef DEBUG
 ../handle.a: handle-types.o handle-exprs.o handle-statems.o handle-funcs.o handle-vars.o print-tree.o comp.tab.o
 	$(AR)
@@ -17,6 +18,9 @@ comp.y: cc.y statements.m4 for.m4 expressions.m4 functions.m4 variables.m4 types
 comp.tab.c: comp.y
 	$(YACC) $^
 	mv comp.tab.h ../include/
+
+%.o: %.c
+	$(CMP)
 
 .PHONY:
 clean: clean_intern
