--- a/phase-1-lexer/Makefile
+++ b/phase-1-lexer/Makefile
@@ -8,5 +8,16 @@ lex.yy.c: comp.l $(INCLUDE)/*
 	$(LEX) $<
 
 .PHONY:
-clean: clean_intern
-	echo "phase 1 clean"
+clean: 
+	rm comp.tab.c 2>/dev/null || true
+	rm comp.y 2>/dev/null || true
+	rm *.o 2>/dev/null || true
+	rm lex.yy.c 2>/dev/null || true
+	rm *.so 2>/dev/null || true
+	rm comp.output 2>/dev/null || true
+	rm *.s 2>/dev/null || true
+	rm main 2>/dev/null || true
+	rm include/comp.tab.h 2>/dev/null || true
+	rm cc 2>/dev/null || true
+	rm *.a 2>/dev/null || true
+
