--- a/phase-4-backend/Makefile
+++ b/phase-4-backend/Makefile
@@ -17,6 +17,17 @@ libx64-backend.so: x64/*
 	$(MAKE) -C x64/ ../libx64-backend.so
 
 .PHONY:
-clean: clean_intern
+clean: 
 	$(MAKE) -C x64/ clean
-	echo "phase 4 clean"
+	rm comp.tab.c 2>/dev/null || true
+	rm comp.y 2>/dev/null || true
+	rm *.o 2>/dev/null || true
+	rm lex.yy.c 2>/dev/null || true
+	rm *.so 2>/dev/null || true
+	rm comp.output 2>/dev/null || true
+	rm *.s 2>/dev/null || true
+	rm main 2>/dev/null || true
+	rm include/comp.tab.h 2>/dev/null || true
+	rm cc 2>/dev/null || true
+	rm *.a 2>/dev/null || true
+
