--- a/phase-4-backend/x64/Makefile
+++ b/phase-4-backend/x64/Makefile
@@ -9,9 +9,15 @@ include ../../include/config.mk
 
 .PHONY:
 clean:
-	rm lex.yy.c 2>/dev/null || true
 	rm comp.tab.c 2>/dev/null || true
-	rm include/comp.tab.h 2>/dev/null || true
+	rm comp.y 2>/dev/null || true
 	rm *.o 2>/dev/null || true
+	rm lex.yy.c 2>/dev/null || true
+	rm *.so 2>/dev/null || true
+	rm comp.output 2>/dev/null || true
+	rm *.s 2>/dev/null || true
 	rm main 2>/dev/null || true
+	rm include/comp.tab.h 2>/dev/null || true
+	rm cc 2>/dev/null || true
 	rm *.a 2>/dev/null || true
+
