Added short keyword.

--- a/phase-4-backend/x64/Makefile
+++ b/phase-4-backend/x64/Makefile
@@ -1,7 +1,7 @@
 INCLUDE=../../include
 include ../../include/config.mk
 
-../libx64-backend.so: backend.o jumps.o int-arithmetic.o registers.o agnostic-arithmetic.o statics.o calls.o variables.o globals.o float-arithmetic.o arithmetic.o
+../libx64-backend.so: backend.o jumps.o int-arithmetic.o registers.o agnostic-arithmetic.o statics.o calls.o variables.o globals.o float-arithmetic.o arithmetic.o constants.o
 	$(SHARE)
 
 %.o: %.c
