Fixed a bug where negative int values wouldn't be converted to long int values correctly.

--- a/phase-3-generator/Makefile
+++ b/phase-3-generator/Makefile
@@ -1,7 +1,7 @@
 INCLUDE=../include
 include ../include/config.mk
 
-../generator.a: misc.o globals.o expr.o statem.o 
+../generator.a: misc.o globals.o expr.o statem.o vars.o types.o functions.o
 	$(AR)
 
 statem.o: statem.c statems/*
